--- a/popup.html
+++ b/popup.html
@@ -1,25 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>QR Code Scanner</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 10px;
-      width: 200px;
-    }
-    button {
-      margin-top: 10px;
-      padding: 5px;
-      cursor: pointer;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>QR Code Scanner</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            width: 250px;
+            background-color: #f9f9f9; /* Light background for contrast */
+            border-radius: 8px; /* Rounded corners */
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+        }
+        h1 {
+            font-size: 20px;
+            text-align: center; /* Centered title */
+            color: #333; /* Darker text color for readability */
+        }
+        button {
+            margin-top: 10px;
+            padding: 10px;
+            width: 100%; /* Full-width button */
+            cursor: pointer;
+            border: none; /* No border */
+            border-radius: 5px; /* Rounded button corners */
+            font-size: 16px; /* Slightly larger text */
+            transition: background-color 0.3s; /* Smooth background change */
+        }
+        /* Style for the scan button */
+        #scan {
+            background-color: #007BFF; /* Primary button color */
+            color: white; /* White text color */
+        }
+        #scan:hover {
+            background-color: #0056b3; /* Darker blue on hover */
+        }
+        /* Style for the open link button */
+        .link-button {
+            background-color: #28a745; /* Green color for the link button */
+            color: white; /* White text color */
+            margin-top: 15px; /* Space above the link button */
+        }
+        .link-button:hover {
+            background-color: #218838; /* Darker green on hover */
+        }
+        #result {
+            margin-top: 15px;
+            padding: 10px;
+            border: 1px solid #ddd; /* Border for the result area */
+            border-radius: 5px; /* Rounded corners */
+            background-color: #fff; /* White background for contrast */
+            color: #555; /* Dark gray text for results */
+            text-align: center; /* Centered text in the result area */
+        }
+    </style>
 </head>
 <body>
+    <h1>QR Code Scanner</h1>
     <button id="scan">Scan QR Code</button>
     <p id="result">Result will appear here</p>
-    <script src="node_modules/jsqr/dist/jsQR.js"></script> <!-- Подключаем jsQR.js -->
-    <script src="popup.js"></script> <!-- Подключаем popup.js -->
+    <script src="node_modules/jsqr/dist/jsQR.js"></script> <!-- Including jsQR.js -->
+    <script src="popup.js"></script> <!-- Including popup.js -->
 </body>
 </html>
