--- a/popup.html
+++ b/popup.html
@@ -8,50 +8,72 @@
             font-family: Arial, sans-serif;
             padding: 20px;
             width: 250px;
-            background-color: #f9f9f9; /* Light background for contrast */
-            border-radius: 8px; /* Rounded corners */
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+            background-color: #f9f9f9;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         h1 {
             font-size: 20px;
-            text-align: center; /* Centered title */
-            color: #333; /* Darker text color for readability */
+            text-align: center;
+            color: #333;
         }
         button {
             margin-top: 10px;
             padding: 10px;
-            width: 100%; /* Full-width button */
+            width: 100%;
             cursor: pointer;
-            border: none; /* No border */
-            border-radius: 5px; /* Rounded button corners */
-            font-size: 16px; /* Slightly larger text */
-            transition: background-color 0.3s; /* Smooth background change */
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: background-color 0.3s;
         }
-        /* Style for the scan button */
         #scan {
-            background-color: #007BFF; /* Primary button color */
-            color: white; /* White text color */
+            background-color: #007BFF;
+            color: white;
         }
         #scan:hover {
-            background-color: #0056b3; /* Darker blue on hover */
+            background-color: #0056b3;
         }
-        /* Style for the open link button */
         .link-button {
-            background-color: #28a745; /* Green color for the link button */
-            color: white; /* White text color */
-            margin-top: 15px; /* Space above the link button */
+            background-color: #28a745;
+            color: white;
+            margin-top: 15px;
+            width: auto; /* Ensure button does not take full width */
         }
         .link-button:hover {
-            background-color: #218838; /* Darker green on hover */
+            background-color: #218838;
         }
         #result {
             margin-top: 15px;
             padding: 10px;
-            border: 1px solid #ddd; /* Border for the result area */
-            border-radius: 5px; /* Rounded corners */
-            background-color: #fff; /* White background for contrast */
-            color: #555; /* Dark gray text for results */
-            text-align: center; /* Centered text in the result area */
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #fff;
+            color: #555;
+            text-align: center;
+        }
+        #loading {
+            display: none; /* Hidden by default */
+            margin-top: 10px;
+            color: #555; /* Color for the loading text */
+            text-align: center; /* Centered loading text */
+        }
+        .spinner {
+            border: 4px solid rgba(0, 0, 0, 0.1);
+            border-radius: 50%;
+            border-top: 4px solid #007BFF;
+            width: 24px;
+            height: 24px;
+            animation: spin 1s linear infinite;
+            margin: 10px auto; /* Center the spinner */
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        ol {
+            padding-left: 20px; /* Indent ordered list */
+            margin-top: 15px; /* Add some space above the list */
         }
     </style>
 </head>
@@ -59,7 +81,8 @@
     <h1>QR Code Scanner</h1>
     <button id="scan">Scan QR Code</button>
     <p id="result">Result will appear here</p>
-    <script src="node_modules/jsqr/dist/jsQR.js"></script> <!-- Including jsQR.js -->
-    <script src="popup.js"></script> <!-- Including popup.js -->
+    <div id="loading" class="spinner" style="display: none;"></div>
+    <ol id="linkList"></ol> <!-- Ordered list for links -->
+    <script src="popup.js"></script>
 </body>
 </html>
