--- a/popup.html
+++ b/popup.html
@@ -18,9 +18,7 @@
             color: #333;
         }
         button {
-            margin-top: 10px;
             padding: 10px;
-            width: 100%; /* Full width for all buttons */
             cursor: pointer;
             border: none;
             border-radius: 5px;
@@ -31,8 +29,10 @@
             align-items: center; /* Center vertically */
         }
         #scan {
+            margin-top: 10px;
             background-color: #007BFF;
             color: white;
+            width: 100%; /* Full width for all buttons */
         }
         #scan:hover {
             background-color: #0056b3;
@@ -45,14 +45,20 @@
             text-align: left; /* Align text to the left */
             padding: 10px; /* Add padding for better spacing */
             position: relative; /* Allow positioning of the delete icon */
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .link-button:hover {
+            background-color: #218838;
         }
 
-        .delete-icon-container {
+        .delete-icon {
             display: none; /* Hidden by default */
-            position: absolute; /* Positioning the icon container */
-            right: 10px; /* Align to the right */
-            top: 50%; /* Center vertically */
-            transform: translateY(-50%); /* Adjust for vertical centering */
+            
+            font-size: 14px; /* Smaller font size for delete */
+            cursor: pointer; /* Pointer cursor */
+            
             background-color: rgba(211, 211, 211, 0.7); /* Light gray with transparency */
             border-radius: 5px; /* Rounded corners */
             padding: 5px; /* Add padding for better spacing */
@@ -60,19 +66,11 @@
             opacity: 0; /* Start with opacity 0 */
         }
 
-        .link-button:hover .delete-icon-container {
+        .link-button:hover .delete-icon {
             display: block; /* Show the delete icon on button hover */
             opacity: 1; /* Fade in effect */
         }
 
-        .delete-icon {
-            color: #fff; /* White color for the icon */
-            border: none; /* No border */
-            font-size: 14px; /* Smaller font size for delete */
-            cursor: pointer; /* Pointer cursor */
-            padding: 0; /* Remove extra padding */
-            margin: 0; /* Remove margin to keep it compact */
-        }
         #result {
             margin-top: 15px;
             padding: 10px;
